--- a/MasterDetailWithLogin/en.lproj/MainStoryboard_iPad.storyboard
+++ b/MasterDetailWithLogin/en.lproj/MainStoryboard_iPad.storyboard
@@ -9,6 +9,7 @@
         <scene sceneID="14">
             <objects>
                 <navigationController id="3" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="kxH-Dg-2sp"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="6">
@@ -51,7 +52,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="15" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1708" y="-152"/>
+            <point key="canvasLocation" x="1348" y="-280"/>
         </scene>
         <!--Login View Controller - LoginViewController-->
         <scene sceneID="frw-61-pun">
@@ -143,7 +144,7 @@
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="tIi-5l-S0i" style="IBUITableViewCellStyleDefault" id="ZSw-0O-9Pw">
-                                <rect key="frame" x="0.0" y="86" width="1024" height="44"/>
+                                <rect key="frame" x="0.0" y="22" width="1024" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZSw-0O-9Pw" id="lZC-QG-Iup">
                                     <rect key="frame" x="0.0" y="0.0" width="1024" height="43"/>
@@ -193,19 +194,31 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="49" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="12" y="-336"/>
+            <point key="canvasLocation" x="-892" y="-360"/>
         </scene>
         <!--Water Details View Controller - WaterDetailsViewController-->
         <scene sceneID="Ehs-YU-dF5">
             <objects>
-                <viewController title="WaterDetailsViewController" id="vmC-xz-2tf" customClass="WaterDetailsViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="waterDetails" title="WaterDetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vmC-xz-2tf" customClass="WaterDetailsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RCm-eE-ne0">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" id="4Tu-77-8aw">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Water Details" id="udC-BJ-8e9"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <segue destination="19" kind="replace" identifier="waterDetails" splitViewControllerTargetIndex="1" id="FZG-tT-err"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MG5-xm-de8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -214,10 +227,19 @@
         <!--Energy Details View Controller - EnergyDetailsViewController-->
         <scene sceneID="gii-Tp-cgX">
             <objects>
-                <viewController title="EnergyDetailsViewController" id="JUT-Ef-5sw" customClass="EnergyDetailsViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="energyDetails" title="EnergyDetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JUT-Ef-5sw" customClass="EnergyDetailsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZQ1-Fa-KaG">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" id="3P9-aY-sVd">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Energy Details" id="QQJ-9r-hme"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
@@ -225,15 +247,24 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="45B-Cs-glz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2044" y="1143"/>
+            <point key="canvasLocation" x="620" y="2383"/>
         </scene>
         <!--Waste Details View Controller - WasteDetailsViewController-->
         <scene sceneID="nCi-27-o6x">
             <objects>
-                <viewController title="WasteDetailsViewController" id="fpa-ti-oM2" customClass="WasteDetailsViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="wasteDetails" title="WasteDetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="fpa-ti-oM2" customClass="WasteDetailsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pOY-U9-ODc">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" id="aSx-I3-Fov">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Waste Details" id="Cbz-j3-AZG"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
@@ -248,15 +279,11 @@
             <objects>
                 <viewController storyboardIdentifier="LoadingDetailViewController" id="uaa-yP-15a" customClass="GVLoadingDetailViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TSH-40-Mxc">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" id="kab-gK-cYs">
-                                <rect key="frame" x="374" y="372" width="20" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </activityIndicatorView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="CVY-uc-TXl">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" id="CVY-uc-TXl">
+                                <rect key="frame" x="0.0" y="-256" width="1024" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items/>
                             </toolbar>
@@ -269,23 +296,34 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
-                        <outlet property="loadingIndicator" destination="kab-gK-cYs" id="Fcv-pb-J5Y"/>
                         <outlet property="toolbar" destination="CVY-uc-TXl" id="oWE-wJ-bZW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A3S-rF-f9C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2932" y="986"/>
+            <point key="canvasLocation" x="-1768" y="967"/>
         </scene>
         <!--Air Details View Controller - AirDetailsViewController-->
         <scene sceneID="3a4-ez-TdN">
             <objects>
-                <viewController title="AirDetailsViewController" id="3aB-zR-TgV" customClass="AirDetailsViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="airDetails" title="AirDetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="3aB-zR-TgV" customClass="AirDetailsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YcF-xi-BuE">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" id="23l-Sn-P6Q">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Air Details" id="2Jo-36-7ZM"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
@@ -310,17 +348,22 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <navigationBar contentMode="scaleToFill" id="KtB-Sl-XXe">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Incident Details" id="1gn-U0-dxH"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Incidet Tracking" id="FyL-pr-b8X"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C0w-f2-fJS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-953" y="1329"/>
+            <point key="canvasLocation" x="789" y="925"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -328,4 +371,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="FZG-tT-err"/>
+    </inferredMetricsTieBreakers>
 </document>
