--- a/MasterDetailWithLogin/en.lproj/MainStoryboard_iPad.storyboard
+++ b/MasterDetailWithLogin/en.lproj/MainStoryboard_iPad.storyboard
@@ -251,7 +251,7 @@
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
-                        <outlet property="dashboardView" destination="A89-Qf-EcU" id="EEk-Fx-Asq"/>
+                        <outlet property="dashboardView" destination="A89-Qf-EcU" id="Ypt-gY-g8G"/>
                         <segue destination="19" kind="replace" identifier="waterDetails" splitViewControllerTargetIndex="1" id="FZG-tT-err"/>
                     </connections>
                 </viewController>
@@ -412,13 +412,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="VOy-qH-M3u">
-                                <rect key="frame" x="323" y="461" width="212" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                             <navigationBar contentMode="scaleToFill" id="KtB-Sl-XXe">
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
