--- a/MasterDetailWithLogin/en.lproj/MainStoryboard_iPad.storyboard
+++ b/MasterDetailWithLogin/en.lproj/MainStoryboard_iPad.storyboard
@@ -415,11 +415,23 @@
                                     <navigationItem title="Incident Details" id="1gn-U0-dxH"/>
                                 </items>
                             </navigationBar>
+                            <webView contentMode="scaleToFill" scalesPageToFit="YES" id="9yE-9N-jQ1">
+                                <rect key="frame" x="0.0" y="44" width="1024" height="720"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="MVY-Mx-VR7" id="HWd-54-rF7"/>
+                                </connections>
+                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <outlet property="dashboardView" destination="9yE-9N-jQ1" id="doO-wh-ROH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C0w-f2-fJS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
