--- a/MasterDetailWithLogin/en.lproj/MainStoryboard_iPad.storyboard
+++ b/MasterDetailWithLogin/en.lproj/MainStoryboard_iPad.storyboard
@@ -33,11 +33,11 @@
             <objects>
                 <viewController storyboardIdentifier="detailView" title="Detail" id="4" customClass="GVDetailViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="26">
-                        <rect key="frame" x="0.0" y="64" width="1024" height="704"/>
+                        <rect key="frame" x="0.0" y="44" width="1024" height="724"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" indicatorStyle="white" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="tlM-2Z-X1P">
-                                <rect key="frame" x="0.0" y="-14" width="1024" height="704"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="724"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="VWC-oh-CdJ">
                                     <size key="itemSize" width="250" height="250"/>
@@ -74,6 +74,8 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="53"/>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
@@ -235,7 +237,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Water Details" id="udC-BJ-8e9"/>
+                                    <navigationItem id="udC-BJ-8e9"/>
                                 </items>
                             </navigationBar>
                             <webView contentMode="scaleToFill" scalesPageToFit="YES" id="A89-Qf-EcU">
@@ -273,7 +275,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Energy Details" id="QQJ-9r-hme"/>
+                                    <navigationItem id="QQJ-9r-hme"/>
                                 </items>
                             </navigationBar>
                             <webView contentMode="scaleToFill" scalesPageToFit="YES" id="2We-P6-igU">
@@ -310,7 +312,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Waste Details" id="Cbz-j3-AZG"/>
+                                    <navigationItem id="Cbz-j3-AZG"/>
                                 </items>
                             </navigationBar>
                             <webView contentMode="scaleToFill" scalesPageToFit="YES" id="vxg-Yo-PUi">
@@ -381,7 +383,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Air Details" id="2Jo-36-7ZM"/>
+                                    <navigationItem id="2Jo-36-7ZM"/>
                                 </items>
                             </navigationBar>
                             <webView contentMode="scaleToFill" scalesPageToFit="YES" id="k59-7h-bWp">
@@ -418,7 +420,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Incident Details" id="1gn-U0-dxH"/>
+                                    <navigationItem id="1gn-U0-dxH"/>
                                 </items>
                             </navigationBar>
                             <webView contentMode="scaleToFill" scalesPageToFit="YES" id="9yE-9N-jQ1">
